--- a/work.html
+++ b/work.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luís Macedo — Portfolio</title>
+    <title>Work</title>
 </head>
 
 <body>
@@ -13,6 +12,7 @@
     <a href="work.html" target="_self">My work</a>
     <a href="about.html" target="_self">Who am I?</a>
     <a href="contact.html" target="_self">Contacts</a>
+    <a href="projects/project1.html" target="_self">Project 01</a>
 </body>
 
 </html>
