mudei os links e nomes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="index.html" target="_self">Home</a>
+    <a href="index.html" target="_self"><img src="LOGO2025.png" alt="Luís Macedo Logo"/></a>
     <a href="work.html" target="_self">My work</a>
     <a href="about.html" target="_self">Who am I?</a>
     <a href="contact.html" target="_self">Contacts</a>
