--- a/projects/project2.html
+++ b/projects/project2.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 02</title>
+    <title>Project 02 — Luís Macedo</title>
 </head>
 
 <body>
-    <a href="../index.html" target="_self">Home</a>
+    <a href="../index.html" target="_self"><img src="LOGO2025.png" alt="Luís Macedo Logo"/></a>
     <a href="../work.html" target="_self">My work</a>
     <a href="../about.html" target="_self">Who am I?</a>
     <a href="../contact.html" target="_self">Contacts</a>
