--- a/work.html
+++ b/work.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work</title>
+    <title>Work — Luís Macedo</title>
 </head>
 
 <body>
-    <a href="index.html" target="_self">Home</a>
+    <a href="index.html" target="_self"><img src="LOGO2025.png" alt="Luís Macedo Logo"/></a>
     <a href="work.html" target="_self">My work</a>
     <a href="about.html" target="_self">Who am I?</a>
     <a href="contact.html" target="_self">Contacts</a>
     <a href="projects/project1.html" target="_self">Project 01</a>
+    <a href="projects/project2.html" target="_self">Project 02</a>
 </body>
 
 </html>
