--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
 <body>
     <a href="index.html" target="_self"><img src="LOGO2025.png" alt="Luís Macedo Logo"/></a>
-    <a href="work.html" target="_self">My work</a>
+    <a href="work.html" target="_self">Work</a>
     <a href="about.html" target="_self">Who am I?</a>
     <a href="contact.html" target="_self">Contacts</a>
 </body>
