--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             <a href="contact.html" class="btn">CONTACT ME!</a>
         </section>
 
+        <section class="hello">
+            <img src="assets/images/HELLO.png" alt="HELLO I'M LUIS" class="hello-image">
+            <a href="contact.html" class="btn">CONTACT ME!</a>
+        </section>
+
         <section class="work-section">
             <img src="assets/images/MYWORK.gif" alt="My Work" class="work-gif">
             <a href="work.html" class="btn">MY WORK</a>
