--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="assets/images/LOGO2025.PNG" alt="Luís Macedo Logo" class="logo"></a>
+        <a href="index.html"><img src="assets/images/LOGO2025.svg" alt="Luís Macedo Logo" class="logo"></a>
         <nav>
             <a href="work.html" class="nav-link">Work</a>
             <a href="about.html" class="nav-link">Who am I?</a>
