--- a/about.html
+++ b/about.html
@@ -3,15 +3,51 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About — Luís Macedo</title>
+    <title>Who Am I? — Luís Macedo</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 
 <body>
-    <a href="index.html" target="_self"><img src="assets/images/LOGO2025.png" alt="Luís Macedo Logo" width="100" height="100"/></a>
-    <a href="work.html" target="_self">Work</a>
-    <a href="about.html" target="_self">Who am I?</a>
-    <a href="contact.html" target="_self">Contacts</a>
+    <header>
+        <a href="index.html"><img src="assets/images/LOGO2025.svg" alt="Luís Macedo Logo" class="logo"></a>
+        <nav>
+            <a href="work.html" class="nav-link">Work</a>
+            <a href="about.html" class="nav-link">Who am I?</a>
+            <a href="contact.html" class="nav-link">Contacts</a>
+        </nav>
+    </header>
+
+    <main class="about-section">
+        <div class="about-content">
+            <img src="assets/images/ABOUT.jpg" alt="Luís Macedo" class="about-image">
+            <div class="about-text">
+                <h1>Luís Macedo</h1>
+                <p>Motion & Graphic Designer — based in Guimarães, Portugal.</p>
+                <p>Graphic Design and Multimedia student at Escola Superior de Arte e Design — Caldas da Rainha</p>
+                <p>Skills <br> Motion Design, Graphic Design, UX & UI, Video, Photography.</p>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer-left">
+            <p>Luís Macedo<br>Guimarães, Portugal<br>2025</p>
+        </div>
+        <div class="footer-center">
+            <p>Find me at<br>
+                <a href="https://www.instagram.com/luish.0/" target="_blank">Instagram</a><br>
+                <a href="https://www.behance.net/luismacedo21" target="_blank">Behance</a>
+            </p>
+        </div>
+        <div class="footer-right">
+            <p>Contact<br>
+                <a href="mailto:luis.h0.macedo@gmail.com">luis.h0.macedo@gmail.com</a>
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
