--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,62 @@
     
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts — Luís Macedo</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 
 <body>
-    <a href="index.html" target="_self"><img src="assets/images/LOGO2025.png" alt="Luís Macedo Logo" width="100" height="100"/></a>
-    <a href="work.html" target="_self">Work</a>
-    <a href="about.html" target="_self">Who am I?</a>
-    <a href="contact.html" target="_self">Contacts</a>
+    <header>
+        <a href="index.html"><img src="assets/images/LOGO2025.svg" alt="Luís Macedo Logo" class="logo"></a>
+        <nav>
+            <a href="work.html" class="nav-link">Work</a>
+            <a href="about.html" class="nav-link">Who am I?</a>
+            <a href="contact.html" class="nav-link">Contacts</a>
+        </nav>
+    </header>
+
+    <main class="contact-section">
+        <form class="contact-form">
+            <div class="form-group">
+                <label for="first-name">Name <span>(required)</span></label>
+                <input type="text" id="first-name" name="first-name" placeholder="First Name" required>
+                <input type="text" id="last-name" name="last-name" placeholder="Last Name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email <span>(required)</span></label>
+                <input type="email" id="email" name="email" placeholder="Your Email" required>
+            </div>
+            <div class="form-group">
+                <label for="project-title">Client or Project Title <span>(required)</span></label>
+                <input type="text" id="project-title" name="project-title" placeholder="Project Title" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message <span>(required)</span></label>
+                <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
+            </div>
+            <button type="submit" class="submit-btn">Submit</button>
+        </form>
+    </main>
+
+    <footer>
+        <div class="footer-left">
+            <p>Luís Macedo<br>Guimarães, Portugal<br>2025</p>
+        </div>
+        <div class="footer-center">
+            <p>Find me at<br>
+                <a href="https://www.instagram.com/luish.0/" target="_blank">Instagram</a><br>
+                <a href="https://www.behance.net/luismacedo21" target="_blank">Behance</a>
+            </p>
+        </div>
+        <div class="footer-right">
+            <p>Contact<br>
+                <a href="mailto:luis.h0.macedo@gmail.com">luis.h0.macedo@gmail.com</a>
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
