--- a/projects/project1.html
+++ b/projects/project1.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html" target="_self"><img src="../LOGO2025.png" alt="Luís Macedo Logo" width="100" height="100"/></a>
+    <a href="../index.html" target="_self"><img src="../assets/images//LOGO2025.svg" alt="Luís Macedo Logo" width="100" height="100"/></a>
     <a href="../work.html" target="_self">Work</a>
     <a href="../about.html" target="_self">Who am I?</a>
     <a href="../contact.html" target="_self">Contacts</a>
