--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <a href="contact.html" class="btn">CONTACT ME!</a>
         </section>
 
-        <section class="work-section">
-            <img src="assets/images/MYWORK.gif" alt="My Work" class="work-gif">
+        <section class="my-work-section">
+            <img src="assets/images/MYWORK.gif" alt="My Work" class="my-work-gif">
             <a href="work.html" class="btn">MY WORK</a>
         </section>
     </main>
