--- a/work.html
+++ b/work.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work — Luís Macedo</title>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
@@ -19,6 +18,33 @@
             <a href="contact.html" class="nav-link">Contacts</a>
         </nav>
     </header>
+
+    <main class="work-section">
+        <div class="work-item">
+            <a href="projects/project1.html">
+                <img src="assets/images/stranger-things.png" alt="Stranger Things - Opening Title Animation">
+                <p>Stranger Things - Opening Title Animation</p>
+            </a>
+        </div>
+        <div class="work-item">
+            <a href="projects/project2.html">
+                <img src="assets/images/music-posters.png" alt="Music Posters">
+                <p>Music Posters</p>
+            </a>
+        </div>
+        <div class="work-item">
+            <a href="projects/project3.html">
+                <img src="assets/images/champions-league.png" alt="CHAMPIONS LEAGUE - Motion Lyric Video">
+                <p>CHAMPIONS LEAGUE - Motion Lyric Video</p>
+            </a>
+        </div>
+        <div class="work-item">
+            <a href="projects/project4.html">
+                <img src="assets/images/bestiary-of-fear.png" alt="Bestiary of Fear - Zine">
+                <p>Bestiary of Fear - Zine</p>
+            </a>
+        </div>
+    </main>
 
     <footer>
         <div class="footer-left">
