--- a/projects/project1.html
+++ b/projects/project1.html
@@ -5,15 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 01 — Luís Macedo</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/styles/styles.css">
 </head>
 
 <body>
-    <a href="../index.html" target="_self"><img src="../assets/images//LOGO2025.svg" alt="Luís Macedo Logo" width="100" height="100"/></a>
-    <a href="../work.html" target="_self">Work</a>
-    <a href="../about.html" target="_self">Who am I?</a>
-    <a href="../contact.html" target="_self">Contacts</a>
-    <a href="project1.html" target="_self">Project 01</a>
-    <a href="project2.html" target="_self">Project 02</a>
+    <header>
+        <a href="../index.html"><img src="../assets/images/LOGO2025.svg" alt="Luís Macedo Logo" class="logo"></a>
+        <nav>
+            <a href="../work.html" class="nav-link">Work</a>
+            <a href="../about.html" class="nav-link">Who am I?</a>
+            <a href="../contact.html" class="nav-link">Contacts</a>
+        </nav>
+    </header>
+
+    <main class="project-section">
+        <h1>Stranger Things - Opening Title Animation</h1>
+        <div class="project-video">
+            <video controls poster="../assets/images/stranger-things.png">
+                <source src="../assets/videos/stranger-things.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <a href="../work.html" class="btn">Back to Work</a>
+    </main>
+
+    <footer>
+        <div class="footer-left">
+            <p>Luís Macedo<br>Guimarães, Portugal<br>2025</p>
+        </div>
+        <div class="footer-center">
+            <p>Find me at<br>
+                <a href="https://www.instagram.com/luish.0/" target="_blank">Instagram</a><br>
+                <a href="https://www.behance.net/luismacedo21" target="_blank">Behance</a>
+            </p>
+        </div>
+        <div class="footer-right">
+            <p>Contact<br>
+                <a href="mailto:luis.h0.macedo@gmail.com">luis.h0.macedo@gmail.com</a>
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
