--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="work-header">
         <a href="index.html"><img src="assets/images/LOGO2025.svg" alt="Luís Macedo Logo" class="logo"></a>
         <nav>
             <a href="work.html" class="nav-link">Work</a>
@@ -19,29 +19,45 @@
         </nav>
     </header>
 
+    <section class="my-work-section">
+        <img src="assets/images/MYWORK.gif" alt="My Work" class="my-work-gif">
+    </section>
+
     <main class="work-section">
         <div class="work-item">
             <a href="projects/project1.html">
                 <img src="assets/images/stranger-things.png" alt="Stranger Things - Opening Title Animation">
-                <p>Stranger Things - Opening Title Animation</p>
             </a>
+            <div class="work-text">
+                <h2><a href="projects/project1.html">Stranger Things - Opening Title Animation</a></h2>
+                <p>An opening title animation for the Netflix Series Stranger Things, made as a final project for a motion design class. Made with image collage and 3D cameras.</p>
+            </div>
         </div>
         <div class="work-item">
+            <div class="work-text">
+                <h2><a href="projects/project2.html">Music Posters</a></h2>
+                <p>Music posters for songs / artists that I enjoy, made with the purpose of practicing my graphic design skills.</p>
+            </div>
             <a href="projects/project2.html">
                 <img src="assets/images/music-posters.png" alt="Music Posters">
-                <p>Music Posters</p>
             </a>
         </div>
         <div class="work-item">
             <a href="projects/project3.html">
                 <img src="assets/images/champions-league.png" alt="CHAMPIONS LEAGUE - Motion Lyric Video">
-                <p>CHAMPIONS LEAGUE - Motion Lyric Video</p>
             </a>
+            <div class="work-text">
+                <h2><a href="projects/project3.html">CHAMPIONS LEAGUE - Motion Lyric Video</a></h2>
+                <p>Animated lyrics video of the song Champions League by Mizzy Miles, made with the purpose of posting on social media, and for a classwork in university.</p>
+            </div>
         </div>
         <div class="work-item">
+            <div class="work-text">
+                <h2><a href="projects/project4.html">Bestiary of Fear - Zine</a></h2>
+                <p>Zine about the fear of people (anthropophobia) as a metaphor for social anxiety. Made for a comunication design classwork using image collage.</p>
+            </div>
             <a href="projects/project4.html">
                 <img src="assets/images/bestiary-of-fear.png" alt="Bestiary of Fear - Zine">
-                <p>Bestiary of Fear - Zine</p>
             </a>
         </div>
     </main>
