--- a/about.html
+++ b/about.html
@@ -13,21 +13,21 @@
 <body>
     <header>
         <a href="index.html"><img src="assets/images/LOGO2025.svg" alt="Luís Macedo Logo" class="logo"></a>
+        <button class="menu-toggle" aria-label="Open menu">&#9776;</button>
         <nav>
             <a href="work.html" class="nav-link">Work</a>
             <a href="about.html" class="nav-link">Who am I?</a>
-            <a href="contact.html" class="nav-link">Contacts</a>
         </nav>
     </header>
 
     <main class="about-section">
         <div class="about-content">
-            <img src="assets/images/ABOUT.jpg" alt="Luís Macedo" class="about-image">
+            <img src="assets/images/ABOUT.JPG" alt="Luís Macedo" class="about-image">
             <div class="about-text">
                 <h1>Luís Macedo</h1>
                 <p>Motion & Graphic Designer — based in Guimarães, Portugal.</p>
                 <p>Graphic Design and Multimedia student at Escola Superior de Arte e Design — Caldas da Rainha</p>
-                <p>Skills <br> Motion Design, Graphic Design, UX & UI, Video, Photography.</p>
+                <p>Skills <br> Motion Design, Graphic Design, Video, Photography, UX & UI.</p>
             </div>
         </div>
     </main>
@@ -48,6 +48,7 @@
             </p>
         </div>
     </footer>
+    <script src="assets/scripts/menu.js" defer></script>
 </body>
 
 </html>
