--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luís Macedo — Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script>
+    <script src="email.js"></script>
     <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 
 <body>
     <header>
         <a href="index.html"><img src="assets/images/LOGO2025.svg" alt="Luís Macedo Logo" class="logo"></a>
+        <button class="menu-toggle" aria-label="Open menu">&#9776;</button>
         <nav>
             <a href="work.html" class="nav-link">Work</a>
             <a href="about.html" class="nav-link">Who am I?</a>
-            <a href="contact.html" class="nav-link">Contacts</a>
         </nav>
     </header>
 
@@ -39,10 +41,13 @@
         </div>
         <div class="footer-right">
             <p>Contact<br>
+                <div id="email_container" onmouseover="showEmailButton()" onmouseout="hideEmailButton()">
                 <a href="mailto:luis.h0.macedo@gmail.com">luis.h0.macedo@gmail.com</a>
+                </div>
             </p>
         </div>
     </footer>
+    <script src="assets/scripts/menu.js" defer></script>
 </body>
 
 </html>
