--- a/work.html
+++ b/work.html
@@ -12,10 +12,10 @@
 <body>
     <header class="work-header">
         <a href="index.html"><img src="assets/images/LOGO2025.svg" alt="Luís Macedo Logo" class="logo"></a>
+        <button class="menu-toggle" aria-label="Open menu">&#9776;</button>
         <nav>
             <a href="work.html" class="nav-link">Work</a>
             <a href="about.html" class="nav-link">Who am I?</a>
-            <a href="contact.html" class="nav-link">Contacts</a>
         </nav>
     </header>
 
@@ -78,6 +78,7 @@
             </p>
         </div>
     </footer>
+    <script src="assets/scripts/menu.js" defer></script>
 </body>
 
 </html>
