--- a/projects/project4.html
+++ b/projects/project4.html
@@ -5,15 +5,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 04 — Luís Macedo</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/styles/styles.css">
+    <script src="../assets/scripts/lightbox.js" defer></script>
 </head>
 
 <body>
-    <a href="../index.html" target="_self"><img src="../assets/images/LOGO2025.svg" alt="Luís Macedo Logo" width="100" height="100"/></a>
-    <a href="../work.html" target="_self">Work</a>
-    <a href="../about.html" target="_self">Who am I?</a>
-    <a href="../contact.html" target="_self">Contacts</a>
-    <a href="project1.html" target="_self">Project 01</a>
-    <a href="project2.html" target="_self">Project 02</a>
-</body>
+    <header>
+        <a href="../index.html"><img src="../assets/images/LOGO2025.svg" alt="Luís Macedo Logo" class="logo"></a>
+        <button class="menu-toggle" aria-label="Open menu">&#9776;</button>
+        <nav>
+            <a href="../work.html" class="nav-link">Work</a>
+            <a href="../about.html" class="nav-link">Who am I?</a>
+        </nav>
+    </header>
 
+    <main class="project-section">
+        <h1>Bestiary of Fear – Zine</h1>
+        <p class="project-description">
+            Zine about the fear of people (anthropophobia) as a metaphor for social anxiety. Made for a communication design classwork using image collage.
+        </p>
+        <div class="project-images-custom-grid">
+            <div class="left-image">
+                <img src="../assets/images/BESTA_POSTER.jpg" alt="Bestiary of Fear Poster">
+            </div>
+            <div class="right-images">
+                <img src="../assets/images/BESTA_ZINE.jpg" alt="Bestiary of Fear Zine">
+                <img src="../assets/images/BESTA_MOCKUP.jpg" alt="Bestiary of Fear Mockup">
+            </div>
+        </div>
+        <a href="../work.html" class="btn">Back to Work</a>
+    </main>
+
+    <footer>
+        <div class="footer-left">
+            <p>Luís Macedo<br>Guimarães, Portugal<br>2025</p>
+        </div>
+        <div class="footer-center">
+            <p>Find me at<br>
+                <a href="https://www.instagram.com/luish.0/" target="_blank">Instagram</a><br>
+                <a href="https://www.behance.net/luismacedo21" target="_blank">Behance</a>
+            </p>
+        </div>
+        <div class="footer-right">
+            <p>Contact<br>
+                <a href="mailto:luis.h0.macedo@gmail.com">luis.h0.macedo@gmail.com</a>
+            </p>
+        </div>
+    </footer>
+    <div id="lightbox" class="lightbox" style="display:none;">
+        <span class="lightbox-close">&times;</span>
+        <img class="lightbox-img" src="" alt="Fullscreen Poster">
+    </div>
+    <script src="../assets/scripts/menu.js" defer></script>
+</body>
 </html>
