--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Luís Macedo — Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script>
-    <script src="email.js"></script>
+    <script src="assets/scripts/email.js"></script>
     <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 
@@ -25,7 +25,7 @@
     <main>
         <section class="hello">
             <img src="assets/images/HELLO.png" alt="HELLO I'M LUIS" class="hello-image">
-            <a href="contact.html" class="btn">CONTACT ME!</a>
+            <a href="work.html" class="btn">MY WORK</a>
         </section>
     </main>
 
@@ -42,7 +42,7 @@
         <div class="footer-right">
             <p>Contact<br>
                 <div id="email_container" onmouseover="showEmailButton()" onmouseout="hideEmailButton()">
-                <a href="mailto:luis.h0.macedo@gmail.com">luis.h0.macedo@gmail.com</a>
+                <a id="email" href="mailto:luis.h0.macedo@gmail.com">luis.h0.macedo@gmail.com</a>
                 </div>
             </p>
         </div>
