--- a/projects/project4.html
+++ b/projects/project4.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 04 — Luís Macedo</title>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script>
+    <script src="../assets/scripts/email.js"></script>
     <link rel="stylesheet" href="../assets/styles/styles.css">
     <script src="../assets/scripts/lightbox.js" defer></script>
 </head>
@@ -23,7 +25,7 @@
     <main class="project-section">
         <h1>Bestiary of Fear – Zine</h1>
         <p class="project-description">
-            Zine about the fear of people (anthropophobia) as a metaphor for social anxiety. Made for a communication design classwork using image collage.
+            Zine about a beast made with image collage. The beast represents anthropophobia, focusing more on social axiety. "Videntium" is the Latin word for "viewer" or "people who see", this represents the fact that the beast is always watching you.
         </p>
         <div class="project-images-custom-grid">
             <div class="left-image">
@@ -49,7 +51,9 @@
         </div>
         <div class="footer-right">
             <p>Contact<br>
-                <a href="mailto:luis.h0.macedo@gmail.com">luis.h0.macedo@gmail.com</a>
+                <div id="email_container" onmouseover="showEmailButton()" onmouseout="hideEmailButton()">
+                <a id="email" href="mailto:luis.h0.macedo@gmail.com">luis.h0.macedo@gmail.com</a>
+                </div>
             </p>
         </div>
     </footer>
