--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 <h1>Luís Macedo</h1>
                 <p>Motion & Graphic Designer — based in Guimarães, Portugal.</p>
                 <p>Graphic Design and Multimedia student at Escola Superior de Arte e Design — Caldas da Rainha</p>
-                <p>Skills <br> Motion Design, Graphic Design, Video, Photography, UX & UI.</p>
+                <p><b>Skills</b> <br> Motion Design, Graphic Design, Video, Photography, UX & UI.</p>
             </div>
         </div>
     </main>
