--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <section class="hello">
-            <img src="assets/images/HELLO.png" alt="HELLO I'M LUIS" class="hello-image">
+            <img src="assets/images/HELLO.gif" alt="HELLO I'M LUIS" class="hello-image">
             <a href="work.html" class="btn">MY WORK</a>
         </section>
     </main>
