--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
                 <p>Graphic Design and Multimedia student at Escola Superior de Arte e Design — Caldas da Rainha</p>
                 <p><b>Skills</b> <br> Motion Design, Graphic Design, Video, Photography, UX & UI.</p>
             </div>
+            <a href="about.html" class="btn">CV</a>
         </div>
     </main>
 
